# cgpt-bridge

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: agent.rs  args.rs  clipboard.rs  denylist.rs  editor.rs  history.rs  lib.rs  main.rs  plan.rs  redact.rs  render.rs  runner.rs  spinner.rs  transport.rs
cli/tests/: ask_smoke.rs
docs/: architecture.md  protocol.md  requirements.md  roadmap.md
extension/: README.md  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/scripts/: copy-manifest.mjs
extension/src/: background.ts  bridge.ts  bridgeProtocol.ts  chatgptAdapter.ts  content.ts  errors.ts  nativeHost.ts  pageShim.ts
host/: Cargo.toml
host/src/: main.rs
host/tests/: router_e2e.rs
install/linux/: install-host.sh
install/macos/: install-host.sh
plans/: roadmap-remaining.md
protocol/: Cargo.toml
protocol/src/: agent.rs  agent_prompt_contract.md  framing.rs  lib.rs  message.rs  socket_path.rs
scripts/: build-dmg.sh  build-release.sh
