[package]
name = "cgpt-bridge-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "cgpt — terminal bridge to the active ChatGPT tab"

[[bin]]
name = "cgpt"
path = "src/main.rs"

[dependencies]
cgpt-bridge-protocol = { path = "../protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
