[package]
name = "cgpt-bridge-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "cgpt-bridge native messaging host (Chrome stdio bridge)"

[[bin]]
name = "cgpt-bridge-host"
path = "src/main.rs"

[dependencies]
cgpt-bridge-protocol = { path = "../protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
