[package]
name = "cgpt-bridge-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Shared framing + message types between cgpt CLI, host, and (later) tests"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
